# baxter_stacker

./: .gitignore  README.md  baxter_real_setup.sh  problem_intro.pptx
manipulation/: CMakeLists.txt  package.xml  setup.py
manipulation/launch/: kmr19_manipulation.launch
manipulation/nodes/: baxter_manipulation.py  kmr19_manipulation_node.py  tf_table_broadcaster.py
manipulation/scripts/: kmr19_manipulation_client.py
manipulation/src/kmr19_manipulation/: __init__.py  arm_control.py  manipulation_main.py  robot_control.py  scene_control.py
manipulation/src/manipulation/: __init__.py  arm_control.py  manipulation.py  robot_control.py  scene_control.py
manipulation/srv/: kmr19_pick_up.srv  kmr19_put_down.srv
perception/: CMakeLists.txt  README  package.xml  setup.py
perception/config/: filter_parameters.yaml
perception/config/camera_info/: depth_PS1080_PrimeSense.yaml  rgb_PS1080_PrimeSense.yaml
perception/launch/: perception_debug.launch  perception_run  perception_run.launch
perception/msg/: Block.msg
perception/nodes/: perception_test_service_node  tf_camera_link_broadcaster.py
perception/src/: filter.cpp
perception/srv/: GetScene.srv
reasoning_planning/: CMakeLists.txt  README.md  package.xml  setup.py
reasoning_planning/common/: plan.pddl  problem.pddl
reasoning_planning/common/mongoDB/journal/: prealloc.0.REMOVED.git-id
reasoning_planning/include/: ManipulateAction.h  PickUpAction.h  PutDownAction.h  StackAction.h  UnstackAction.h
reasoning_planning/launch/: baxter_reason_plan_real.launch  baxter_reason_plan_service_real.launch  baxter_reason_plan_service_simulation.launch  baxter_reason_plan_simulation.launch  kmr19_baxter.launch
reasoning_planning/msg/: DispatchPlanFeedback.msg
reasoning_planning/nodes/: reasoning_planning_interface  reasoning_planning_pytools  reasoning_planning_service_client_test_node  reasoning_planning_service_node  reasoning_planning_standalone_node
reasoning_planning/resources/: domain_baxter.pddl  plan.bash  problem_baxter.pddl
reasoning_planning/src/: ManipulateAction.cpp  PickUpAction.cpp  PutDownAction.cpp  StackAction.cpp  UnstackAction.cpp
reasoning_planning/src/reasoning_planning_helper/: __init__.py  block_semantics.py  knowledge_base_helper.py  reasoning_planning_interface.py  rosplan_service_call_helper.py  test_functions.py
reasoning_planning/srv/: StackGoalService.srv
speech_recognition/: CMakeLists.txt  README.md  gcsapi_user_credentials.json  package.xml
speech_recognition/launch/: baxter_speech_recognition.launch
speech_recognition/nodes/: parser_client_node.py  reasoning_planning_service_client_test_node  speech_request_node.py
speech_recognition/scripts/: launch_stanford_server.py  launch_stanford_server.sh
speech_recognition/srv/: CommSpeechParser.srv
